# what-reverse-ai-project

./: .gitignore  .gitleaks.toml  LICENSE  README.md  commitlint.config.js  initial.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.cursor/commands/: ui-ux-pro-max.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: admin-deploy.yml  ci-quality-gate.yml  review-gate.yml  security-scan.yml
apps/admin/: .env.example  CHANGELOG.md  eslint.config.mjs  next.config.ts  package.json  performance.config.js  playwright.config.ts  vitest.config.ts  vitest.perf.config.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/migrations/: 001_initial.sql  002_executions.sql  003_settings.sql  004_api_keys.sql  005_snapshots.sql
apps/desktop/src-tauri/src/: crypto.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  ollama.rs  state.rs  storage.rs
apps/desktop/src-tauri/src/commands/: api_keys.rs  execution.rs  mod.rs  ollama.rs  settings.rs  snapshot.rs  storage.rs  system.rs  updater.rs  workflow.rs
apps/server/: .env.example  Makefile  go.mod  go.sum
apps/web/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.perf.config.ts
codechat/: .auth_name  .port  .secret  .token  config
design-system/agentflow/: MASTER.md
docs/: ARCHITECTURE.md  DEVELOPMENT-TODOLIST.md  DEVELOPMENT.md  README.md  SDK-CLI-USER-GUIDE.md  STYLE-TERMINAL-PIXEL.md  init-database.sql
docs/api/: API-FIELDS.md  ERROR-CODES.md  creative-assistant-api.md
docs/architecture/: BACKEND-SERVICE-BOUNDARIES.md  DATA-CONSISTENCY.md  DEPLOYMENT-MULTI-REGION.md  GLOSSARY.md  PRODUCT-GOALS.md  (+1 more)
(+1515 files in other folders)
