[package]
name = "agentflow-desktop"
version = "0.1.0"
description = "AgentFlow Desktop Application"
authors = ["AgentFlow Team"]
license = "MIT"
repository = "https://github.com/agentflow/agentflow"
edition = "2021"
rust-version = "1.70"

[lib]
name = "agentflow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5"
tokio-util = "0.7"
regex = "1"
flate2 = "1.0"

# 加密相关
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hex = "0.4"

# 系统相关
os_info = "3"
hostname = "0.4"
sysinfo = "0.31"
zip = "2.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
